fist version of air

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
             <div class="shinchan__headTop"></div>
             <div class="shinchan__topHear"></div>
             <div class="shinchan__headBottom"></div>
+            <div class="shinchan__ear"></div>
         </div>
     </figure>
-</body>
+</body>  
 </html>
