--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
             <div class="shinchan__topHear"></div>
             <div class="shinchan__headBottom"></div>
             <div class="shinchan__ear"></div>
+            <div class="shinchan__eye shinchan__eye--left"></div>
+            <div class="shinchan__eye shinchan__eye--right"></div>
+            <div class="shinchan__mouth"></div>
+            <div class="shinchan__brow shinchan__brow--left"></div>
+            <div class="shinchan__brow shinchan__brow--right"></div>
+            <div class="shinchan__bigBrow"></div>
         </div>
     </figure>
 </body>  
