first version of shin chan <3

--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
             <div class="shinchan__mouth"></div>
             <div class="shinchan__brow shinchan__brow--left"></div>
             <div class="shinchan__brow shinchan__brow--right"></div>
-            <div class="shinchan__bigBrow"></div>
+            <div class="shinchan__bigBrow shinchan__bigBrow--left"></div>
+            <div class="shinchan__bigBrow shinchan__bigBrow--right"></div>
+
         </div>
     </figure>
 </body>  
