added neumorphism background

--- a/index.html
+++ b/index.html
@@ -8,21 +8,22 @@
     <title>Shin Chan</title>
 </head>
 <body>
-    <figure class="shinchan">
-        <div class="shinchan__head">
-            <div class="shinchan__headTop"></div>
-            <div class="shinchan__topHear"></div>
-            <div class="shinchan__headBottom"></div>
-            <div class="shinchan__ear"></div>
-            <div class="shinchan__eye shinchan__eye--left"></div>
-            <div class="shinchan__eye shinchan__eye--right"></div>
-            <div class="shinchan__mouth"></div>
-            <div class="shinchan__brow shinchan__brow--left"></div>
-            <div class="shinchan__brow shinchan__brow--right"></div>
-            <div class="shinchan__bigBrow shinchan__bigBrow--left"></div>
-            <div class="shinchan__bigBrow shinchan__bigBrow--right"></div>
-
-        </div>
-    </figure>
+    <article class="card">
+        <figure class="shinchan">
+            <div class="shinchan__head">
+                <div class="shinchan__headTop"></div>
+                <div class="shinchan__topHear"></div>
+                <div class="shinchan__headBottom"></div>
+                <div class="shinchan__ear"></div>
+                <div class="shinchan__eye shinchan__eye--left"></div>
+                <div class="shinchan__eye shinchan__eye--right"></div>
+                <div class="shinchan__mouth"></div>
+                <div class="shinchan__brow shinchan__brow--left"></div>
+                <div class="shinchan__brow shinchan__brow--right"></div>
+                <div class="shinchan__bigBrow shinchan__bigBrow--left"></div>
+                <div class="shinchan__bigBrow shinchan__bigBrow--right"></div>
+            </div>
+        </figure>
+    </article>
 </body>  
 </html>
