added music when the button is clicked :D

--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/style.css">
+    <script src="/js/main.js" defer></script>
     <title>Shin Chan</title>
 </head>
 <body>
-    <article class="card">
+    <audio id="js--audio" src="/music/opening.mp4"></audio>
+    <article class="card" id="js--shin">
         <figure class="shinchan">
             <div class="shinchan__head">
                 <div class="shinchan__headTop"></div>
