styled readme and fixed some spelling errors

--- a/index.html
+++ b/index.html
@@ -7,15 +7,15 @@
     <link rel="stylesheet" href="/css/style.css">
     <script src="/js/main.js" defer></script>
     <!-- HTML Meta Tags -->
-    <title>Shin Chan</title>
-    <meta name="description" content="Say Hey... Hey, Shin Chan! Helemaal nagemaakt in HTML en CSS. Problemen maken houdt hij van!
+    <title>Shin-Chan</title>
+    <meta name="description" content="Say Hey... Hey, Shin-chan! Helemaal nagemaakt in HTML en CSS. Problemen maken houdt hij van!
     Klik op hem voor een leuke easter-egg.">
 
     <!-- Facebook Meta Tags -->
     <meta property="og:url" content="https://vettedingenbouwen.nl/shinchan/">
     <meta property="og:type" content="website">
-    <meta property="og:title" content="Shin Chan">
-    <meta property="og:description" content="Say Hey... Hey, Shin Chan! Helemaal nagemaakt in HTML en CSS. Problemen maken houdt hij van!
+    <meta property="og:title" content="Shin-chan">
+    <meta property="og:description" content="Say Hey... Hey, Shin-chan! Helemaal nagemaakt in HTML en CSS. Problemen maken houdt hij van!
     Klik op hem voor een leuke easter-egg.">
     <meta property="og:image" content="https://vettedingenbouwen.nl/img/shinchan.png">
 
@@ -23,8 +23,8 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta property="twitter:domain" content="vettedingenbouwen.nl">
     <meta property="twitter:url" content="https://vettedingenbouwen.nl/shinchan/">
-    <meta name="twitter:title" content="Shin Chan">
-    <meta name="twitter:description" content="Say Hey... Hey, Shin Chan! Helemaal nagemaakt in HTML en CSS. Problemen maken houdt hij van!
+    <meta name="twitter:title" content="Shin-chan">
+    <meta name="twitter:description" content="Say Hey... Hey, Shin-chan! Helemaal nagemaakt in HTML en CSS. Problemen maken houdt hij van!
     Klik op hem voor een leuke easter-egg.">
     <meta name="twitter:image" content="https://vettedingenbouwen.nl/img/shinchan.png">
 
