adjusted readme and index.html

--- a/index.html
+++ b/index.html
@@ -12,21 +12,21 @@
     Klik op hem voor een leuke easter-egg.">
 
     <!-- Facebook Meta Tags -->
-    <meta property="og:url" content="https://vettedingenbouwen.nl/shinchan/">
+    <meta property="og:url" content="https://shin-chan.css-art.nl">
     <meta property="og:type" content="website">
     <meta property="og:title" content="Shin-chan">
     <meta property="og:description" content="Say Hey... Hey, Shin-chan! Helemaal nagemaakt in HTML en CSS. Problemen maken houdt hij van!
     Klik op hem voor een leuke easter-egg.">
-    <meta property="og:image" content="https://vettedingenbouwen.nl/img/shinchan.png">
+    <meta property="og:image" content="https://shin-chan.css-art.nl/img/shinchan.png">
 
     <!-- Twitter Meta Tags -->
-    <meta name="twitter:card" content="summary_large_image">
-    <meta property="twitter:domain" content="vettedingenbouwen.nl">
-    <meta property="twitter:url" content="https://vettedingenbouwen.nl/shinchan/">
+    <meta name="twitter:card" content="Het eindproduct, Shin-Chan!">
+    <meta property="twitter:domain" content="shin-chan.css-art.nl">
+    <meta property="twitter:url" content="https://shin-chan.css-art.nl">
     <meta name="twitter:title" content="Shin-chan">
     <meta name="twitter:description" content="Say Hey... Hey, Shin-chan! Helemaal nagemaakt in HTML en CSS. Problemen maken houdt hij van!
     Klik op hem voor een leuke easter-egg.">
-    <meta name="twitter:image" content="https://vettedingenbouwen.nl/img/shinchan.png">
+    <meta name="twitter:image" content="https://shin-chan.css-art/img/shinchan.png">
 
     <!-- Meta Tags Generated via https://www.opengraph.xyz -->
         
